# plm

./: .gitignore  CHANGELOG-0.0.1.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  format.yml  main.yml  release-old.yml  release.yml
examples/: integration_example.rs
examples/advanced/: custom_plugin.rs
examples/basic/: simple_usage.rs
scripts/: build.sh  install-hooks.sh  install.sh  pre-commit.sh  release.sh
src/: config.rs  core.rs  lib.rs  main.rs  traits.rs
tests/: integration_test.rs  simple_test.rs
